@@ -57,13 +57,13 @@ class JJsonTest {
         Stream<Json> dataStream = payload.stream("data");
         Optional<Json> optionalData = dataStream.findFirst();
         Assertions.assertTrue(optionalData.isPresent());
-        Assertions.assertEquals(optionalData.get(), dataList.get(0));
+        Assertions.assertEquals(optionalData.get(), dataList.getFirst());
 
         Json[] dataArray = payload.get("data", JJson[].class);
         Assertions.assertNotNull(dataArray);
         Assertions.assertEquals(1, dataArray.length);
 
-        Json data = dataList.get(0);
+        Json data = dataList.getFirst();
         Assertions.assertEquals("articles", data.string("type"));
         Assertions.assertEquals("1", data.string("id"));
 
@@ -306,7 +306,7 @@ class JJsonTest {
         URL url = JJsonTest.class.getClassLoader().getResource(MOCK_JSON_RESOURCE);
         Json payload = JSON_PARSER.readValue(Objects.requireNonNull(url), JJson.class);
 
-        Json data = payload.array("data").get(0);
+        Json data = payload.array("data").getFirst();
         Assertions.assertEquals("1", data.stringOr("id", "2"));
         Assertions.assertEquals("2", data.stringOr("missingId", "2"));
 
@@ -330,7 +330,7 @@ class JJsonTest {
         Assertions.assertTrue(payload.seekArray("data").isPresent());
         Assertions.assertFalse(payload.seekArray("missingData").isPresent());
 
-        Json data = payload.array("data").get(0);
+        Json data = payload.array("data").getFirst();
         Assertions.assertTrue(data.seek("attributes").isPresent());
         Assertions.assertFalse(data.seek("missingAttributes").isPresent());
     }
